--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Mix & Drink - Discover. Mix. Enjoy.</title>
+    <meta
+      name="description"
+      content="Explore new random cocktails on every visit with Mix & Drink, your cocktail discovery app"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta name="theme-color" content="#FFBD20" />
   </head>
   <body>
     <div id="app"></div>
